# mcvk

./: .clang-tidy-args  .gitignore  Build.toml  CMakeLists.txt  iwyu.py
include/mcvk/: command.hpp  device.hpp  global.hpp  logger.hpp  physicaldeviceinfo.hpp  pipeline.hpp  queue.hpp  shader.hpp  swapchain.hpp  sync.hpp  types.hpp  validationlayers.hpp  vkcomponents.hpp  window.hpp
include/mcvk/utils/: color.h
include/mcvulkan/: color.h  device.hpp  global.hpp  logger.hpp  physicaldeviceinfo.hpp  queue.hpp  swapchain.hpp  types.hpp  validationlayers.hpp  vkcomponents.hpp  window.hpp
src/: command.cpp  device.cc  device.cpp  init.cpp  logger.cc  logger.cpp  main.cpp  mcvk.cc  mcvk.cpp  pipeline.cc  pipeline.cpp  queue.cc  queue.cpp  shader.cpp  swapchain.cc  swapchain.cpp  sync.cc  sync.cpp  vkcomponents.cc  vkcomponents.cpp  window.cpp
